Resolve access for direct modular tools